Bug 466046 - Multiple Monitors with matching names cannot be told apart under Display Configuration applet.
Summary: Multiple Monitors with matching names cannot be told apart under Display Conf...
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: Plasma Applet (other bugs)
Version First Reported In: 5.27.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-19 02:32 UTC by kmemz
Modified: 2026-06-17 11:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.4
Sentry Crash Report:


Attachments
My three MSI Optix G24C monitors, all easily confused for one another. (78.43 KB, image/png)
2023-02-19 02:32 UTC, kmemz
Details
"kscreen-console outputs" terminal log (6.65 KB, text/plain)
2023-03-08 18:18 UTC, kmemz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kmemz 2023-02-19 02:32:20 UTC
Created attachment 156470 [details]
My three MSI Optix G24C monitors, all easily confused for one another.

SUMMARY
I have three identical monitors, but the only thing in the display configurator that actually produces a physically different name under Display Configuration is the "Identify" button that brings up the OSD, only because the OSD displays the physical DisplayPort plug next to the name. It wasn't really an issue before, but in 5.27, with the new Display Priorities menu, that replaced the Primary Monitor button, to actually set my display priorities, I now need to do some guesswork as to which monitor is which.


STEPS TO REPRODUCE
1. Have two or more matching monitors, or monitors that otherwise report the same name in software
2. Open Display Configuration menu
3. Attempt to interpret which monitor is which, especially in the Priorities menu.

OBSERVED RESULT
All monitors are indistinguishable due to having the same name.

EXPECTED RESULT
Appended numbers when name match detected, or Port ID, displayed after name.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch (EndeavourOS)
KDE Plasma Version: 5.27.0
KDE Frameworks Version 5.103.0
Qt Version: 5.15.8
Comment 1 David Redondo 2023-02-20 15:02:11 UTC
Could you please attach the output of

kscreen-console outputs

Thanks!
Comment 2 Bug Janitor Service 2023-03-07 03:45:37 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 kmemz 2023-03-08 18:18:26 UTC
Created attachment 157122 [details]
"kscreen-console outputs" terminal log

The terminal log of "kscreen-console outputs" as requested by David Redondo.
Apologies for the delay.
Comment 4 David Redondo 2023-03-24 07:58:19 UTC
Git commit 21155f81fee953d5b5e1bab92565b85ef99a0260 by David Redondo.
Committed on 23/03/2023 at 08:37.
Pushed by davidre into branch 'master'.

Display connector name instead of type name when serial number is identical

Displays the name of the connector ("DP-1") instead of just
typeName ("DisplayPort"). When two identical outputs are connected
to the same connector type it doesn't help differntiating.
Furthermore it matches what will be shown by the output locator
effect.
FIXED-IN:5.27.4

M  +1    -1    common/utils.cpp

https://invent.kde.org/plasma/kscreen/commit/21155f81fee953d5b5e1bab92565b85ef99a0260
Comment 5 David Redondo 2023-03-24 08:09:06 UTC
Git commit 7f2c1f8b104efb748cae5814ed2aa87fb2046796 by David Redondo.
Committed on 24/03/2023 at 07:58.
Pushed by davidre into branch 'Plasma/5.27'.

Display connector name instead of type name when serial number is identical

Displays the name of the connector ("DP-1") instead of just
typeName ("DisplayPort"). When two identical outputs are connected
to the same connector type it doesn't help differntiating.
Furthermore it matches what will be shown by the output locator
effect.
FIXED-IN:5.27.4


(cherry picked from commit 21155f81fee953d5b5e1bab92565b85ef99a0260)

M  +1    -1    common/utils.cpp

https://invent.kde.org/plasma/kscreen/commit/7f2c1f8b104efb748cae5814ed2aa87fb2046796
Comment 6 Bug Janitor Service 2026-04-16 02:24:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin-x11/-/merge_requests/94
Comment 7 Bug Janitor Service 2026-04-16 02:26:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9090
Comment 8 Nate Graham 2026-06-15 17:15:28 UTC
Git commit 1993fe12fd828de212b23e966cdc105aa43821ab by Nate Graham, on behalf of Ramil Nurmanov.
Committed on 15/06/2026 at 17:15.
Pushed by ngraham into branch 'master'.

kcm: Add visual display number badge next to monitor names

This commit introduces a compact visual badge shown consistently next
to every monitor name.

The previous custom implementation (Rectangle + QQC2.Label) has been
replaced with the new `Kirigami.Badge` component. This significantly
reduces code duplication, improves maintainability, and makes the
style consistent with the rest of KDE/Plasma.

The badge now appears in the following places:

* Navigation tabs
* Priority reorder dialog
* "Replica of:" combobox items

Display numbers are calculated based on sorted connector names
(case-insensitive), starting from 1, and given a unique color.

This change significantly improves quick visual identification of
displays, especially in multi-monitor setups with identical or
similar-looking panels.
Related: bug 481061, bug 450344
FIXED-IN: 6.8

M  +41   -4    kcm/output_model.cpp
M  +5    -0    kcm/output_model.h
M  +15   -6    kcm/ui/Output.qml
A  +26   -0    kcm/ui/OutputNumberBadge.qml     [License: GPL(v2.0+)]
M  +19   -1    kcm/ui/OutputPanel.qml
M  +28   -5    kcm/ui/main.qml

https://invent.kde.org/plasma/kscreen/-/commit/1993fe12fd828de212b23e966cdc105aa43821ab
Comment 9 Vlad Zahorodnii 2026-06-17 11:25:21 UTC
Git commit 5c58d4e38ddcfbdc187893fa61f71af87094aa76 by Vlad Zahorodnii, on behalf of Ramil Nurmanov.
Committed on 17/06/2026 at 11:25.
Pushed by vladz into branch 'master'.

outputlocator: show output number alongside name in OSD

Add the output number as a prominent square badge integrated into the OutputLabel, displayed on the left side and spanning the full height of the OSD.

This change makes the screen number immediately visible, similar to how KScreen numbers displays in its configuration UI. The number is rendered inside the existing `OutputLabel.qml` as a large square on the left, with the name and resolution shown to its right. No additional QML scene or component is introduced.

![39.png](/uploads/de63aca32e137914db214e4b964f811c/39.png){width=658 height=393}

The numbering algorithm is based on connector names (e.g., HDMI-1, DP-1) and is calculated identically in both KWin and KScreen, ensuring the same order and consistency between the OSD overlays and KCM UI without additional synchronization.

Related KScreen MR: https://invent.kde.org/plasma/kscreen/-/merge_requests/456
Related: bug 481061, bug 450344

M  +11   -1    src/plugins/outputlocator/outputlocator.cpp
M  +69   -20   src/plugins/outputlocator/qml/OutputLabel.qml

https://invent.kde.org/plasma/kwin/-/commit/5c58d4e38ddcfbdc187893fa61f71af87094aa76