Display connector name instead of type name when serial number is identical

Displays the name of the connector ("DP-1") instead of just
typeName ("DisplayPort"). When two identical outputs are connected
to the same connector type it doesn't help differntiating.
Furthermore it matches what will be shown by the output locator
effect.
BUG:466046
FIXED-IN:5.27.4


(cherry picked from commit 21155f81fee953d5b5e1bab92565b85ef99a0260)